--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "graphql-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +14,9 @@
     "express": "^4.13.4",
     "express-graphql": "^0.4.9",
     "graphql": "^0.4.18"
+  },
+  "devDenpendencies": {
+    "babel-cli": "6.6.5",
+    "babel-preset-es2015": "6.6.0",
   }
 }
