--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "express-graphql": "^0.4.9",
     "graphql": "^0.4.18"
   },
-  "devDenpendencies": {
+  "devDependencies": {
+    "babel-plugin-transform-es2015-classes": "^6.6.5",
     "babel-cli": "6.6.5",
     "babel-preset-es2015": "6.6.0",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-runtime": "^5.8.35"
   }
 }
