--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node .",
+    "start": "babel-node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,11 +15,5 @@
     "express-graphql": "^0.4.9",
     "graphql": "^0.4.18"
   },
-  "devDependencies": {
-    "babel-plugin-transform-es2015-classes": "^6.6.5",
-    "babel-cli": "6.6.5",
-    "babel-preset-es2015": "6.6.0",
-    "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-runtime": "^5.8.35"
-  }
+  "devDependencies": {}
 }
